--- a/3/requirements.txt
+++ b/3/requirements.txt
@@ -2,5 +2,5 @@ matplotlib>=3.0.3
 Pillow>=6.1.0
 tensorflow>=1.14.0
 setuptools>=41.0.0
-opencv-python>=4.1.0.25
-opencv-contrib-python
+opencv-python==3.3.0.10
+opencv-contrib-python==3.3.0.10
